subiendo primeros archivos

--- a/equipo.html
+++ b/equipo.html
@@ -45,7 +45,7 @@
     <div class="equipo-container">
         <div class="equipo-content">
             <div class="equipo-card">
-                <img src="/img/doctor.png" alt="doctor2d">
+                <img src="img/doctor.png" alt="doctor2d">
                 <h1>Dr. Lorem, ipsum dolor.</h1>
                 <p>Médico cirujano</p>
                 <div class="btn-saber-mas">
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="equipo-card">
-                <img src="/img/doctor.png" alt="doctor2d">
+                <img src="img/doctor.png" alt="doctor2d">
                 <h1>Dr. Lorem, ipsum</h1>
                 <p>Médico cirujano</p>
                 <div class="btn-saber-mas">
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="equipo-card">
-                <img src="/img/doctor.png" alt="doctor2d">
+                <img src="img/doctor.png" alt="doctor2d">
                 <h1>Dr. Lorem, ipsum</h1>
                 <p>Médico cirujano</p>
                 <div class="btn-saber-mas">
