--- a/servicios.html
+++ b/servicios.html
@@ -46,43 +46,43 @@
         <div class="servicios-content">
                 <div class="box">
                     <div class="container-img"> 
-                        <img src="/img/servicios/odontologia.png" alt="">
+                        <img src="img/servicios/odontologia.png" alt="">
                     </div>
                     <h1>Odontologia</h1>
                 </div>
                 <div class="box">
                     <div class="container-img"> 
-                        <img src="/img/servicios/odontopediatria.png" alt="">
+                        <img src="img/servicios/odontopediatria.png" alt="">
                     </div>
                     <h1>Odontopediatría</h1>
                 </div>
                 <div class="box">
                     <div class="container-img"> 
-                        <img src="/img/servicios/rehabilitacion oral.png" alt="">
+                        <img src="img/servicios/rehabilitacion oral.png" alt="">
                     </div>
                     <h1>Rehabilitación Oral y Estética</h1>
                 </div>
                 <div class="box">
                     <div class="container-img"> 
-                        <img src="/img/servicios/ortodoncia.png" alt="">
+                        <img src="img/servicios/ortodoncia.png" alt="">
                     </div>
                     <h1>Ortodoncia</h1>
                 </div>
                 <div class="box">
                     <div class="container-img"> 
-                        <img src="/img/servicios/cirujia bucal.png" alt="">
+                        <img src="img/servicios/cirujia bucal.png" alt="">
                     </div>
                     <h1>Cirujía bucal</h1>
                 </div>
                 <div class="box">
                     <div class="container-img"> 
-                        <img src="/img/servicios/endoconcia.png" alt="">
+                        <img src="img/servicios/endoconcia.png" alt="">
                     </div>
                     <h1>Endodoncia</h1>
                 </div>
                 <div class="box">
                     <div class="container-img"> 
-                        <img src="/img/servicios/periodoncia.png" alt="">
+                        <img src="img/servicios/periodoncia.png" alt="">
                     </div>
                     <h1>Periodoncia</h1>
                 </div>
